M360_Sprint_01b_and_02a_V1.1/objects/AB_UserCreation__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPointUrl__c</fullName>
        <label>EndPointUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clientSecret__c</fullName>
        <label>clientSecret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>AB_UserCreation</label>
</CustomObject>